--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ Pillow==9.5.0
 requests==2.31.0
 st-annotated-text==4.0.0
 streamlit==1.23.1
-
+transformers==4.30.1
+keras==2.12.0
+tensorflow==2.12.0
