--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pip==23.1.2
 numpy==1.24.3
 pandas==2.0.2
-Pillow==9.5.0
+streamlit==1.23.1
 requests==2.31.0
 st-annotated-text==4.0.0
 transformers==4.30.1
