--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pip==23.1.2
-numpy==1.24.3
-pandas==2.0.2
-streamlit==1.23.1
-requests==2.31.0
-st-annotated-text==4.0.0
-transformers==4.30.1
-keras==2.12.0
-tensorflow==2.12.0
+pip
+numpy
+pandas
+streamlit
+requests
+st-annotated-text
+transformers
+keras
+tensorflow
 
